buildscript {
    repositories { mavenCentral() }
    dependencies {
        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.2.3.RELEASE'
        classpath "org.springframework:springloaded:1.2.4.RELEASE"
    }
}

apply plugin: 'java'
apply plugin: 'spring-boot'
apply plugin: 'idea'

group = 'springbootsample'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'

idea {
    module {
        inheritOutputDirs = false
        outputDir = file("$buildDir/classes/main/")
    }
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'org.springframework.boot:spring-boot-starter-web'
    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
    compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
    compile 'org.springframework.boot:spring-boot-starter-security'
    compile "org.springframework:springloaded:1.2.4.RELEASE"

    compile 'org.apache.commons:commons-lang3:3.4'
//    compile 'mysql:mysql-connector-java'
    compile 'com.h2database:h2'
    compile 'org.projectlombok:lombok:1.+'

    testCompile 'org.springframework.boot:spring-boot-starter-test'
}

jar.baseName = 'spring-boot-sample'
